--- a/casino/documentation/index.html
+++ b/casino/documentation/index.html
@@ -48,7 +48,7 @@
             <div class="accordion-body">
               <h3 class="text-muted">Step 1</h3>
               <p>
-                Download the application zip package from CodeCanyon and log in to cPanel (or other control panel).
+                Download the application zip package from ADABET and log in to cPanel (or other control panel).
               </p>
 
               <h3 class="text-muted">Step 2</h3>
@@ -157,13 +157,13 @@
               </p>
               <kbd class="d-block mb-3">
                 <kbd class="d-block">CREATE DATABASE casino CHARACTER SET utf8 COLLATE utf8_general_ci;</kbd>
-                <kbd class="d-block">CREATE USER 'casino'@'localhost' IDENTIFIED BY 'password123';</kbd>
+                <kbd class="d-block">CREATE USER 'casino'@'localhost' IDENTIFIED BY 'password12345678';</kbd>
                 <kbd class="d-block">GRANT ALL PRIVILEGES ON casino.* TO 'casino'@'localhost';</kbd>
               </kbd>
 
               <h3 class="text-muted">Step 3</h3>
               <p>
-                Download the application zip package from CodeCanyon, upload it to the web root folder of your domain or subdomain and unzip.
+                Download the application zip package from ADABET, upload it to the web root folder of your domain or subdomain and unzip.
               </p>
               <div class="alert alert-warning" role="alert">
                 <h4 class="alert-heading">Important</h4>
@@ -254,67 +254,67 @@
 
       <ul>
         <li>
-          <a href="https://codecanyon.net/item/american-roulette-addon-for-stake-casino-gaming-platform/25861124" target="_blank">American Roulette</a>
+          <a href="https://adabet.io/item/american-roulette-addon-for-stake-casino-gaming-platform/25861124" target="_blank">American Roulette</a>
         </li>
         <li>
-          <a href="https://codecanyon.net/item/blackjack-addon-for-stake-casino-gaming-platform/25382743" target="_blank">Blackjack</a>
+          <a href="https://adabet.io/item/blackjack-addon-for-stake-casino-gaming-platform/25382743" target="_blank">Blackjack</a>
         </li>
         <li>
-          <a href="https://codecanyon.net/item/caribbean-poker-addon-for-stake-casino-gaming-platform/35324363" target="_blank">Caribbean Poker</a>
+          <a href="https://adabet.io/item/caribbean-poker-addon-for-stake-casino-gaming-platform/35324363" target="_blank">Caribbean Poker</a>
         </li>
         <li>
-          <a href="https://codecanyon.net/item/casino-holdem-addon-for-stake-casino-gaming-platform/27345845" target="_blank">Casino Hold'em</a>
+          <a href="https://adabet.io/item/casino-holdem-addon-for-stake-casino-gaming-platform/27345845" target="_blank">Casino Hold'em</a>
         </li>
         <li>
-          <a href="https://codecanyon.net/item/crash-addon-for-stake-casino-gaming-platform/34684134" target="_blank">Crash</a>
+          <a href="https://adabet.io/item/crash-addon-for-stake-casino-gaming-platform/34684134" target="_blank">Crash</a>
         </li>
         <li>
-          <a href="https://codecanyon.net/item/crypto-prediction-addon-for-stake-casino-gaming-platform/32848779" target="_blank">Crypto Prediction</a>
+          <a href="https://adabet.io/item/crypto-prediction-addon-for-stake-casino-gaming-platform/32848779" target="_blank">Crypto Prediction</a>
         </li>
         <li>
-          <a href="https://codecanyon.net/item/dice-addon-for-stake-casino-gaming-platform/25626168" target="_blank">Dice</a>
+          <a href="https://adabet.io/item/dice-addon-for-stake-casino-gaming-platform/25626168" target="_blank">Dice</a>
         </li>
         <li>
-          <a href="https://codecanyon.net/item/dice-3d-addon-for-stake-casino-gaming-platform/26244902" target="_blank">Dice 3D</a>
+          <a href="https://adabet.io/item/dice-3d-addon-for-stake-casino-gaming-platform/26244902" target="_blank">Dice 3D</a>
         </li>
         <li>
-          <a href="https://codecanyon.net/item/european-roulette-addon-for-stake-casino-gaming-platform/25795301" target="_blank">European Roulette</a>
+          <a href="https://adabet.io/item/european-roulette-addon-for-stake-casino-gaming-platform/25795301" target="_blank">European Roulette</a>
         </li>
         <li>
-          <a href="https://codecanyon.net/item/heads-or-tails-addon-for-stake-casino-gaming-platform/26373254" target="_blank">Heads or Tails</a>
+          <a href="https://adabet.io/item/heads-or-tails-addon-for-stake-casino-gaming-platform/26373254" target="_blank">Heads or Tails</a>
         </li>
         <li>
-          <a href="https://codecanyon.net/item/horse-racing-addon-for-stake-casino-gaming-platform/29177664" target="_blank">Horse Racing</a>
+          <a href="https://adabet.io/item/horse-racing-addon-for-stake-casino-gaming-platform/29177664" target="_blank">Horse Racing</a>
         </li>
         <li>
-          <a href="https://codecanyon.net/item/keno-addon-for-stake-casino-gaming-platform/31643671" target="_blank">Keno</a>
+          <a href="https://adabet.io/item/keno-addon-for-stake-casino-gaming-platform/31643671" target="_blank">Keno</a>
         </li>
         <li>
-          <a href="https://codecanyon.net/item/lucky-wheel-addon-for-stake-casino-gaming-platform/27128739" target="_blank">Lucky Wheel</a>
+          <a href="https://adabet.io/item/lucky-wheel-addon-for-stake-casino-gaming-platform/27128739" target="_blank">Lucky Wheel</a>
         </li>
         <li>
-          <a href="https://codecanyon.net/item/multiplayer-blackjack-addon-for-stake-casino-gaming-platform/26635626" target="_blank">Multiplayer Blackjack</a>
+          <a href="https://adabet.io/item/multiplayer-blackjack-addon-for-stake-casino-gaming-platform/26635626" target="_blank">Multiplayer Blackjack</a>
         </li>
         <li>
-          <a href="https://codecanyon.net/item/multiplayer-roulette-addon-for-stake-casino-gaming-platform/32258732" target="_blank">Multiplayer Roulette</a>
+          <a href="https://adabet.io/item/multiplayer-roulette-addon-for-stake-casino-gaming-platform/32258732" target="_blank">Multiplayer Roulette</a>
         </li>
         <li>
-          <a href="https://codecanyon.net/item/plinko-addon-for-stake-casino-gaming-platform/30151263" target="_blank">Plinko</a>
+          <a href="https://adabet.io/item/plinko-addon-for-stake-casino-gaming-platform/30151263" target="_blank">Plinko</a>
         </li>
         <li>
-          <a href="https://codecanyon.net/item/raffle-lottery-addon-for-stake-casino-gaming-platform/27709060" target="_blank">Raffle / Lottery</a>
+          <a href="https://adabet.io/item/raffle-lottery-addon-for-stake-casino-gaming-platform/27709060" target="_blank">Raffle / Lottery</a>
         </li>
         <li>
-          <a href="https://codecanyon.net/item/sic-bo-addon-for-stake-casino-gaming-platform/29810058" target="_blank">Sic bo</a>
+          <a href="https://adabet.io/item/sic-bo-addon-for-stake-casino-gaming-platform/29810058" target="_blank">Sic bo</a>
         </li>
         <li>
-          <a href="https://codecanyon.net/item/multi-slots-addon-for-stake-casino-gaming-platform/26067950" target="_blank">Slots</a>
+          <a href="https://adabet.io/item/multi-slots-addon-for-stake-casino-gaming-platform/26067950" target="_blank">Slots</a>
         </li>
         <li>
-          <a href="https://codecanyon.net/item/slots-3d-addon-for-stake-casino-gaming-platform/33455533" target="_blank">Slots 3D</a>
+          <a href="https://adabet.io/item/slots-3d-addon-for-stake-casino-gaming-platform/33455533" target="_blank">Slots 3D</a>
         </li>
         <li>
-          <a href="https://codecanyon.net/item/video-poker-addon-for-stake-casino-gaming-platform/25588739" target="_blank">Video Poker</a>
+          <a href="https://adabet.io/item/video-poker-addon-for-stake-casino-gaming-platform/25588739" target="_blank">Video Poker</a>
         </li>
       </ul>
     </div>
@@ -324,10 +324,10 @@
 
       <p>
         Please note that support can only be provided during the application support period. 6 months of free support are provided with your purchase. Should you need support outside of this period you will need to renew it.
-        <a href="https://help.market.envato.com/hc/en-us/articles/207886473-Extending-and-Renewing-Item-Support" target="_blank"> How to extend / renew the app support? </a>
+        <a href="https://help.adabet.io/hc/en-us/articles/207886473-Extending-and-Renewing-Item-Support" target="_blank"> How to extend / renew the app support? </a>
       </p>
       <p>
-        To get technical support please submit a new ticket at <a href="https://support.financialplugins.com" target="_blank">https://support.financialplugins.com</a>. If you see an application error please do the following:
+        To get technical support please submit a new ticket at <a href="https://support.adabet.io" target="_blank">https://support.adabet.io</a>. If you see an application error please do the following:
       </p>
       <ul>
         <li>Enable <b>Debug</b> mode (<b>Backend</b> » <b>Settings</b> » <b>Logging</b>)<sup>1</sup></li>
